vemo-app/main/default/objects/Student_ISA_Payment__c/Student_ISA_Payment__c.object-meta.xml
<CustomObject>
    <label>Student Program - ISA Payment</label>
    <nameField>
        <displayFormat>PMT{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Program - ISA Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>