vemo-app/main/default/objects/Student_ISA_Payment__c/fields/AnnualIncomeLevel__c.field-meta.xml
<CustomField>
    <fullName>AnnualIncomeLevel__c</fullName>
    <label>Annual Income Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>