vemo-app/main/default/objects/Student_ISA_Payment__c/fields/IsPaymentCap__c.field-meta.xml
<CustomField>
    <fullName>IsPaymentCap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Payment Cap</label>
    <type>Checkbox</type>
</CustomField>