vemo-app/main/default/objects/Student_ISA_Payment__c/fields/ListInIncomeGrowthExample__c.field-meta.xml
<CustomField>
    <fullName>ListInIncomeGrowthExample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List In Income Growth Example</label>
    <type>Checkbox</type>
</CustomField>