vemo-app/main/default/objects/Student_ISA_Payment__c/fields/MonthlyPaymentFlat__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPaymentFlat__c</fullName>
    <label>Monthly Payment Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>