vemo-app/main/default/objects/Student_ISA_Payment__c/fields/StudentProgram__c.field-meta.xml
<CustomField>
    <fullName>StudentProgram__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Program</label>
    <referenceTo>StudentProgram__c</referenceTo>
    <relationshipLabel>Student Program - ISA Payments</relationshipLabel>
    <relationshipName>StudentISAPayments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>