vemo-app/main/default/objects/Student_ISA_Payment__c/fields/TotalPaymentsFlat__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentsFlat__c</fullName>
    <label>Total Payments Flat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>