vemo-app/main/default/objects/Student_ISA_Payment__c/fields/TotalPaymentsWithIncomeGrowth__c.field-meta.xml
<CustomField>
    <fullName>TotalPaymentsWithIncomeGrowth__c</fullName>
    <label>Total Payments with Income Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>